unpackaged/main/default/objects/QS_User_Story__c/QS_User_Story__c.object-meta.xml
<CustomObject>
    <description>User Stories capture initial, high-level objectives and outcomes that are desired. 

User Stories captures what a user does or needs to do as part of his or her job function.

User Stories captures the &#39;who&#39;, &#39;what&#39; and &#39;why&#39; of a requirement in a simple, concise way.

User Stories serve as the foundation from which all requirements will be built off of.</description>
    <label>Business Process</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>BP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>