unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Because__c.field-meta.xml
<CustomField>
    <fullName>QS_Because__c</fullName>
    <description>Why? Because....</description>
    <inlineHelpText>What is the value behind this request? What does this enable? How does this help? (ie. Why do you need it?)</inlineHelpText>
    <label>Because</label>
    <length>255</length>
    <type>Text</type>
</CustomField>