unpackaged/main/default/objects/QS_User_Story__c/fields/QS_E2E_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_E2E_Sort_Order__c</fullName>
    <description>Sort field used to arrange ALL Business Processes in approximate End-to-End order, regardless of Track.</description>
    <inlineHelpText>Sort field used to arrange ALL Business Processes in approximate End-to-End order, regardless of Track.</inlineHelpText>
    <label>E2E Sort Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>