unpackaged/main/default/objects/QS_User_Story__c/fields/QS_I_Am_A__c.field-meta.xml
<CustomField>
    <fullName>QS_I_Am_A__c</fullName>
    <inlineHelpText>What role/responsibility does this User Story pertain to? (ie. Who needs this?)</inlineHelpText>
    <label>Roles Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Development Rep</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Engineering / R&amp;D</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Support Manager</fullName>
            </value>
            <value>
                <fullName>Support Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>