unpackaged/main/default/objects/QS_User_Story__c/fields/QS_I_Want__c.field-meta.xml
<CustomField>
    <fullName>QS_I_Want__c</fullName>
    <inlineHelpText>What is it that you need to happen? This should not specify a system or tool. (ie. What do you need?)</inlineHelpText>
    <label>I Want To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>