unpackaged/main/default/objects/QS_User_Story__c/fields/QS_L2_Reference__c.field-meta.xml
<CustomField>
    <fullName>QS_L2_Reference__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPQ - Apply Pricing</fullName>
            </value>
            <value>
                <fullName>CPQ - Configure Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>CPQ - Generate Quote Output</fullName>
            </value>
            <value>
                <fullName>CPQ - Initiate Quote</fullName>
            </value>
            <value>
                <fullName>CPQ - Opportunity to Order Conversion</fullName>
            </value>
            <value>
                <fullName>CPQ - Perform Quote Approvals</fullName>
            </value>
            <value>
                <fullName>CPQ - Review &amp; Accept Quote</fullName>
            </value>
            <value>
                <fullName>Customer Support - Close Case</fullName>
            </value>
            <value>
                <fullName>Customer Support - Initiate Root Cause Analysis</fullName>
            </value>
            <value>
                <fullName>Customer Support - Open Case</fullName>
            </value>
            <value>
                <fullName>Customer Support - Review and Approve KB Articles</fullName>
            </value>
            <value>
                <fullName>Customer Support - Work Case</fullName>
            </value>
            <value>
                <fullName>Data - Customer Support</fullName>
            </value>
            <value>
                <fullName>Data - Finance</fullName>
            </value>
            <value>
                <fullName>Data - Foundational</fullName>
            </value>
            <value>
                <fullName>Data - Legal</fullName>
            </value>
            <value>
                <fullName>Data - Marketing</fullName>
            </value>
            <value>
                <fullName>Data - Professional Services</fullName>
            </value>
            <value>
                <fullName>Data - Sales</fullName>
            </value>
            <value>
                <fullName>Finance - Convert Opportunity to Order</fullName>
            </value>
            <value>
                <fullName>Finance - Decommission</fullName>
            </value>
            <value>
                <fullName>Finance - Dunning &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Finance - Fulfill/ Provision</fullName>
            </value>
            <value>
                <fullName>Finance - Integrate SF to ERP</fullName>
            </value>
            <value>
                <fullName>Finance - Invoice Orders</fullName>
            </value>
            <value>
                <fullName>Finance - Manage Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Finance - Record to Report</fullName>
            </value>
            <value>
                <fullName>Finance - Recognize Revenue</fullName>
            </value>
            <value>
                <fullName>General Setup and Security</fullName>
            </value>
            <value>
                <fullName>Integration - Build integrations to net new systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>