unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>QS_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>