unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Process_Link__c.field-meta.xml
<CustomField>
    <fullName>QS_Process_Link__c</fullName>
    <label>Process Link</label>
    <type>Url</type>
</CustomField>