unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>