unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Track__c</fullName>
    <label>Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipName>QS_User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>