unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Track_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_External_Id__c</fullName>
    <formula>QS_Track__r.QS_Track_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track External Id</label>
    <type>Text</type>
</CustomField>