unpackaged/main/default/objects/QS_User_Story__c/fields/QS_Track_Name__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_Name__c</fullName>
    <formula>QS_Track__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track Name</label>
    <type>Text</type>
</CustomField>