unpackaged/main/default/objects/QS_User_Story__c/fields/QS_User_Story_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_User_Story_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>User Story External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>