unpackaged/main/default/objects/QS_User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QS_Track__c</columns>
    <columns>NAME</columns>
    <columns>QS_L2_Reference__c</columns>
    <columns>QS_I_Am_A__c</columns>
    <columns>QS_Sort_Order__c</columns>
    <columns>QS_Process_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>