unpackaged/main/default/objects/QS_User_Story__c/listViews/CPQ_User_Stories.listView-meta.xml
<ListView>
    <fullName>CPQ_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>QS_Sort_Order__c</columns>
    <columns>QS_L2_Reference__c</columns>
    <columns>QS_I_Am_A__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>CPQ</value>
    </filters>
    <label>CPQ Business Processes</label>
</ListView>