unpackaged/main/default/objects/QS_User_Story__c/listViews/Customer_Success_Business_Processes.listView-meta.xml
<ListView>
    <fullName>Customer_Success_Business_Processes</fullName>
    <columns>NAME</columns>
    <columns>QS_L2_Reference__c</columns>
    <columns>QS_Sort_Order__c</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_I_Am_A__c</columns>
    <columns>QS_I_Want__c</columns>
    <columns>QS_Because__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>Customer Success - GS</value>
    </filters>
    <label>Success Business Processes</label>
</ListView>