unpackaged/main/default/objects/QS_User_Story__c/listViews/Finance_Business_Processes.listView-meta.xml
<ListView>
    <fullName>Finance_Business_Processes</fullName>
    <columns>NAME</columns>
    <columns>QS_Sort_Order__c</columns>
    <columns>QS_L2_Reference__c</columns>
    <columns>QS_I_Am_A__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <label>Finance Business Processes</label>
</ListView>